Changes for officials for resident user and admin
